deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-ccw-fees-service-service
  labels:
    app: laa-ccw-fees-service-service
spec:
  selector:
    app: laa-ccw-fees-service # this should match the pod label in deployment.yml
  ports:
    - name: http
      port: 8086
      targetPort: 8086
