deployments/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laa-ccw-fees-service-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: laa-ccw-fees-service-ingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/whitelist-source-range: 51.149.250.0/24,51.149.249.0/29,194.33.249.0/29,51.149.249.32/29,194.33.248.0/29,20.49.214.199/32,20.49.214.228/32,20.26.11.71/32,20.26.11.108/32,194.33.200.0/21,194.33.216.0/23,194.33.218.0/24,128.77.75.64/26,188.214.15.75/32,35.178.209.113/32,3.8.51.207/32,35.177.252.54/32,192.168.5.101/32,92.177.120.49/32,81.134.202.29/32,79.152.189.104/32,179.50.12.212/32,188.172.252.34/32,194.33.192.0/25,194.33.193.0/25,194.33.196.0/25,194.33.197.0/25, [...]
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "<html> <head> <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'></head><body> <div class='container'> <div class='content'> <div class='title'>You are not authorised to access this application</div><div><br><br><b><a href='' target='_top'>Contact Us</a></b> if you have any queries</div></div></div></body></html>";
      }
      error_page 403 @custom_403;
spec:
  ingressClassName: default
  tls:
    - hosts:
        - ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: laa-ccw-fees-service-service # this should match the metadata.name in service.yml
                port:
                  number: 8086
